syntax = "proto3";

import "proto/basic/user.proto";
option go_package = "protobuf/protogen/basic";

message UserGroup {
  uint32 group_id = 1 [json_name="group_id"];
  string group_name = 2 [json_name="group_name"];
  repeated string roles = 3 [json_name="roles"];
  repeated User users = 4 [json_name="users"];
  string description = 16 [json_name="description"];
}